...


  static void showErrorDialog(BuildContext context, String content) {
    showCupertinoDialog<void>(
      context: context,
      builder: (BuildContext context) => CupertinoAlertDialog(
        key: const Key('email empty'),
        title: Text(
            'Error',
            style: TextStyle(
                fontFamily: CupertinoTheme.of(context).textTheme.textStyle.fontFamily
            )
        ),
...
    showCupertinoModalPopup<void>(
      barrierDismissible: false,
      context: context,
      builder: (BuildContext context) => WillPopScope(
          onWillPop: () async => false,
          child: CupertinoAlertDialog(
            key: const Key('Success'),
            title: Text(
                'Success',
                style: TextStyle(
                    fontFamily: CupertinoTheme.of(context).textTheme.textStyle.fontFamily
                )
            ),
...
