...
    final DsUser user = ModalRoute.of(context)?.settings.arguments as DsUser;

    return CupertinoPageScaffold(
        navigationBar: CupertinoNavigationBar(
            middle: Text('Your profile', style: TextStyle(fontFamily: CupertinoTheme.of(context).textTheme.textStyle.fontFamily), textScaleFactor: 1),
            trailing: GestureDetector(
              key: const Key('sign out button'),
              onTap: () {
                showCupertinoDialog(
                    barrierDismissible: true,
                    context: context,
                    builder: (context) {
                      return CupertinoAlertDialog(
...
                                  style: TextStyle(
                                      fontFamily: CupertinoTheme.of(context).textTheme.textStyle.fontFamily
                                  )
                              ),
                            ),
                            CupertinoDialogAction(
                              key: const Key('final sign out'),
                              isDefaultAction: true,
                              onPressed: () async {
                                try {
                                  await auth.signOut().then((result) {
                                    if (result == null) {
                                      Authentication.authRedirect(context);
...
