...
              if (usernameController.text.length > 16) {
                Authentication.showErrorDialog(context, 'Username should contain at most 16 characters');
              } else {
                user.update(usernameController.text, _selectedLocation);
                // Navigator.pushNamedAndRemoveUntil(
                //     context,
                //     'userpage',
                //     ModalRoute.withName('userpage'),
                //     arguments: user
                // );
                Navigator.pop(context);
                Navigator.pushReplacementNamed(context, 'userpage', arguments: user);
              }
...
